# seqlabel

./: README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pypi-publish.yml
phrase_matching/: core.py  entity_filters.py  matchers.py  offset_converter.py  serializers.py  utils.py
seqlabel/: __init__.py  entity_filters.py  matchers.py  serializers.py
tests/: conftest.py  test_core.py  test_entity_filters.py  test_matchers.py  test_phrase_matching.py  test_serializers.py  test_utils.py
