[tool.poetry]
name = "phrase-matching"
version = "0.1.0"
description = ""
authors = ["yasufumi <yasufumi.taniguchi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
intervaltree = "^3.1.0"
pyahocorasick = "^1.4.2"
conllu = "^4.4"
seqeval = "^1.2.2"
pytokenizations = "^0.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.26.0"
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    .eggs
  | .git
  | .hg
  | .pytest_cache
  | .mypy_cache
  | .tox
  | .venv
  | build
  | dist
)/
'''
