[tool.poetry]
name = "seqlabel"
version = "0.2.1"
description = "Rule-based Text Labeling Framework Aiming at Flexibility"
authors = ["Yasufumi Taniguchi <yasufumi.taniguchi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tech-sketch/seqlabel"

[tool.poetry.dependencies]
python = "^3.8"
pyahocorasick = "^1.4.2"
pytokenizations = "^0.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.26.0"
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"
pytest-cov = "^2.12.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    .eggs
  | .git
  | .hg
  | .pytest_cache
  | .mypy_cache
  | .tox
  | .venv
  | build
  | dist
)/
'''
